--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "heroku-postbuild": "mkdir -p Images",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
